--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.1.1",
     "util": "^0.12.5",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.0"
