--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "i": "^0.3.7",
     "npm": "^9.2.0",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.1.1",
+    "styled-components": "^5.3.6",
     "util": "^0.12.5",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.0"
