--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.1.1",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6",
     "util": "^0.12.5",
     "uuidv4": "^6.2.13",
