--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@cloudinary/url-gen": "^1.8.7",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@emotion/unitless": "^0.8.1",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@tanstack/react-query": "^4.22.0",
